# docs/swagger.json
@@ -10,11 +10,12 @@
         },
         "version": "1.0"
     },
+    "host": "localhost:5001",
     "basePath": "api/v1",
     "paths": {
-        "/auth/sign-in": {
+        "/auth/login": {
             "post": {
-                "description": "Sign in and return token",
+                "description": "Login and return token",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,7 +25,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Sign in",
+                "summary": "Login",
                 "parameters": [
                     {
                         "description": "Email",
@@ -49,15 +50,15 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserWithToken"
                         }
                     }
                 }
             }
         },
-        "/auth/sign-up": {
+        "/auth/register": {
             "post": {
-                "description": "Sign up new user, returns user and token",
+                "description": "Register user, returns user and token",
                 "consumes": [
                     "application/json"
                 ],
@@ -67,7 +68,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Sign up new user",
+                "summary": "Register user",
                 "parameters": [
                     {
                         "description": "First name",
@@ -143,7 +144,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserResponse"
                         }
                     }
                 }
@@ -177,7 +178,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Todo"
+                            "$ref": "#/definitions/models.TodoResponse"
                         }
                     }
                 }
@@ -185,115 +186,93 @@
         }
     },
     "definitions": {
-        "models.Todo": {
+        "models.TodoResponse": {
             "type": "object",
-            "required": [
-                "content",
-                "created_at",
-                "created_by"
-            ],
             "properties": {
                 "content": {
-                    "type": "string",
-                    "maxLength": 1024
-                },
-                "created_at": {
                     "type": "string"
                 },
-                "created_by": {
+                "createdAt": {
                     "type": "string"
+                },
+                "createdBy": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "update_by": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_id": {
+                "updateBy": {
                     "type": "integer"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
-        "models.User": {
+        "models.UserResponse": {
             "type": "object",
-            "required": [
-                "first_name",
-                "last_name",
-                "password"
-            ],
             "properties": {
                 "about": {
-                    "type": "string",
-                    "maxLength": 1024
+                    "type": "string"
                 },
                 "address": {
-                    "type": "string",
-                    "maxLength": 250
+                    "type": "string"
                 },
                 "avatar": {
-                    "type": "string",
-                    "maxLength": 512
+                    "type": "string"
                 },
                 "birthday": {
-                    "type": "string",
-                    "maxLength": 10
+                    "type": "string"
                 },
                 "city": {
-                    "type": "string",
-                    "maxLength": 24
+                    "type": "string"
                 },
                 "country": {
-                    "type": "string",
-                    "maxLength": 24
+                    "type": "string"
                 },
-                "created_at": {
+                "createdAt": {
                     "type": "string"
                 },
                 "email": {
-                    "type": "string",
-                    "maxLength": 60
+                    "type": "string"
                 },
-                "first_name": {
-                    "type": "string",
-                    "maxLength": 30
+                "firstName": {
+                    "type": "string"
                 },
                 "gender": {
-                    "type": "string",
-                    "maxLength": 10
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "last_name": {
-                    "type": "string",
-                    "maxLength": 30
-                },
-                "login_date": {
+                "lastName": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
+                "loginDate": {
+                    "type": "string"
                 },
-                "phone_number": {
-                    "type": "string",
-                    "maxLength": 20
+                "phoneNumber": {
+                    "type": "string"
                 },
                 "role": {
-                    "type": "string",
-                    "maxLength": 10
-                },
-                "updated_at": {
                     "type": "string"
                 },
-                "user_id": {
+                "updatedAt": {
                     "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserWithToken": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.UserResponse"
                 }
             }
         }
