# internal/auth/delivery/http/handler.go
@@ -1,18 +1,110 @@
-package http
+package handler
 
 import (
-	"boilerplate-clean-arch/internal/auth"
 	"boilerplate-clean-arch/config"
+	"boilerplate-clean-arch/internal/auth/models"
+	"boilerplate-clean-arch/internal/auth/usecase"
+	"boilerplate-clean-arch/internal/constants"
+	"boilerplate-clean-arch/pkg/httpResponse"
+	"boilerplate-clean-arch/pkg/utils"
+	"net/http"
+	"strings"
+
+	"github.com/labstack/echo/v4"
+	"github.com/labstack/gommon/log"
 )
 
-type authHandlers struct {
-	cfg    *config.Config
-	authUC auth.UseCase
+type Handler struct {
+	cfg     *config.Config
+	usecase usecase.IUseCase
 }
 
-func NewAuthHandlers(cfg *config.Config, authUC auth.UseCase) auth.Handlers {
-	return &authHandlers{
-		cfg:    cfg,
-		authUC: authUC,
+func NewHandler(cfg *config.Config, usecase usecase.IUseCase) Handler {
+	return Handler{
+		cfg:     cfg,
+		usecase: usecase,
+	}
+}
+
+// Map auth routes
+func (h Handler) MapAuthRoutes(authGroup *echo.Group) {
+	authGroup.POST("/register", h.Register())
+	authGroup.POST("/login", h.Login())
+	// authGroup.POST("/logout", h.Logout())
+	// authGroup.GET("/find", h.FindByName())
+	// authGroup.GET("/all", h.GetUsers())
+	// authGroup.GET("/:user_id", h.GetUserByID())
+	// authGroup.Use(middleware.AuthJWTMiddleware(authUC, cfg))
+	// authGroup.GET("/me", h.GetMe())
+	// authGroup.GET("/token", h.GetCSRFToken())
+	// authGroup.POST("/:user_id/avatar", h.UploadAvatar(), mw.CSRF)
+	// authGroup.PUT("/:user_id", h.Update(), mw.OwnerOrAdminMiddleware(), mw.CSRF)
+	// authGroup.DELETE("/:user_id", h.Delete(), mw.CSRF, mw.RoleBasedAuthMiddleware([]string{"admin"}))
+}
+
+// Login godoc
+//
+//	@Summary		Login
+//	@Description	Login and return token
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			Email		body		string	true	"Email"
+//	@Param			Password	body		string	true	"Password"
+//	@Success		200			{object}	models.UserWithToken
+//	@Router			/auth/login [post]
+func (h Handler) Login() echo.HandlerFunc {
+	return func(c echo.Context) error {
+		ctx := utils.GetRequestCtx(c)
+		params := &models.LoginRequest{}
+		if err := utils.ReadRequest(c, params); err != nil {
+			log.Error(err)
+			return c.JSON(http.StatusOK, httpResponse.NewInternalServerError(err))
+		}
+
+		userWithToken, err := h.usecase.Login(ctx, params)
+		if err != nil {
+			return c.JSON(http.StatusOK, httpResponse.ParseError(err))
+		}
+
+		return c.JSON(http.StatusOK, httpResponse.NewRestResponse(http.StatusOK, "Success", userWithToken))
+	}
+}
+
+// Register godoc
+//
+//	@Summary		Register user
+//	@Description	Register user, returns user and token
+//	@Tags			Auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			FirstName	body		string	true	"First name"
+//	@Param			LastName	body		string	true	"Last name"
+//	@Param			Email		body		string	true	"Email"
+//	@Param			Password	body		string	true	"Password"
+//	@Param			Gender		body		string	true	"Gender"
+//	@Param			City		body		string	false	"City"
+//	@Param			Country		body		string	false	"Country"
+//	@Param			Birthday	body		string	false	"Gender"
+//	@Success		201			{object}	models.UserResponse
+//	@Router			/auth/register [post]
+func (h Handler) Register() echo.HandlerFunc {
+	return func(c echo.Context) error {
+		ctx := utils.GetRequestCtx(c)
+		user := &models.SaveRequest{}
+		if err := utils.ReadRequest(c, user); err != nil {
+			log.Error(err)
+			return c.JSON(http.StatusOK, httpResponse.NewInternalServerError(err))
+		}
+
+		createdUser, err := h.usecase.Register(ctx, user)
+		if err != nil {
+			if strings.Contains(err.Error(), constants.STATUS_CODE_BAD_REQUEST) {
+				return c.JSON(http.StatusOK, httpResponse.NewBadRequestError(utils.GetErrorMessage(err)))
+			} else {
+				return c.JSON(http.StatusOK, httpResponse.NewInternalServerError(err))
+			}
+		}
+		return c.JSON(http.StatusCreated, httpResponse.NewRestResponse(http.StatusCreated, constants.STATUS_MESSAGE_CREATED, createdUser))
 	}
 }
